fixed new post page being slightly too long

--- a/app/src/main/resources/static/css/custom.css
+++ b/app/src/main/resources/static/css/custom.css
@@ -53,7 +53,7 @@ body{
 }
 
 .main-rows-profile{
-    max-height: 80vh;
+    height: 70vh;
 }
 
 .light-column {
@@ -82,10 +82,13 @@ body{
 
 .image-col{
     width: 40vw;
+    /*height: 70vh; !important;*/
+
 }
 
 .desc-col{
     width: 53.5vw;
+    /*height: 70vh;*/
 }
 
 form.new-post-form{
@@ -109,8 +112,15 @@ input[type="file"] {
 }
 
 .post-image{
-    width: 50vw;
-    height: 50vw;
+    width: 100%;
+    height: 100%;
+}
+
+.view-post{
+    width: 100vh;
+    height: 70vh;
+    display: block;
+    margin: auto;
 }
 
 footer{
